welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:11: error: ';' expected but '{' found.
}while(nbBiscuit < 2) {
                      ^